--- a/index.html
+++ b/index.html
@@ -60,19 +60,13 @@
                                         </ul>
                                     </div>
                                     <div class="bottom">
-                                        <a href="#">НА ОФИЦИАЛЬНЫЙ САЙТ</a>
+                                        <a href="https://nirvel.ru">НА ОФИЦИАЛЬНЫЙ САЙТ</a>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="swiper-slide">Slide 2</div>
                         <div class="swiper-slide">Slide 3</div>
-                        <div class="swiper-slide">Slide 4</div>
-                        <div class="swiper-slide">Slide 5</div>
-                        <div class="swiper-slide">Slide 6</div>
-                        <div class="swiper-slide">Slide 7</div>
-                        <div class="swiper-slide">Slide 8</div>
-                        <div class="swiper-slide">Slide 9</div>
                     </div>
                     <div class="swiper-button-next"></div>
                     <div class="swiper-button-prev"></div>
@@ -190,7 +184,7 @@
         </div>
     </section>
 
-    <section class="bg_lids">
+    <div class="bg_lids">
         <div class="wrap_container">
             <div class="lid_wrap">
                 <div class="lid_content">
@@ -207,7 +201,9 @@
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+
+
 
     <section>
         <div class="wrap_container">
@@ -264,6 +260,61 @@
             </div>
         </div>
     </section>
+
+    <section class="bg_sect">
+        <div class="wrap_container">
+            <div class="bg_sect_content_descript">
+                <h2>Вся продукция <br> сертифицирована</h2>
+                <h5>и имеет все необходимые разрешительные документы!</h5>
+            </div>
+        </div>
+    </section>
+
+    <section class="our">
+        <div class="wrap_container">
+            <div class="title_section">
+                <h2>ДЛЯ КОГО НАШЕ ПРЕДЛОЖЕНИЕ</h2>
+            </div>
+        </div>
+        <div class="wrap_container">
+            <div class="our_content">
+                <div class="item">
+                    <div class="our_content_item_left">
+                        <img src="./img/our_item_1.png" alt="">
+                        <h5>Для салонов и студий красоты</h5>
+                        <p>Тем кто заботится
+                            о своей репутации и использует
+                            качественные материалы.</p>
+                    </div>
+                    <div class="our_content_item_left">
+                        <img src="./img/our_item_2.png" alt="">
+                        <h5>Для магазинов и интернет-магазинов</h5>
+                        <p>Тем кто хочет увеличить ассортимент продукции имеющий стабильный спрос</p>
+                    </div>
+                </div>
+                <div class="our_content_item_images">
+                    <img src="./img/our.png" alt="">
+                </div>
+                <div class="item">
+                    <div class="our_content_item_right">
+                        <img src="./img/our_item_3.png" alt="">
+                        <h5>Для предпринимателей
+                            и дистрибьютеров</h5>
+                        <p>Тем кто хочет заниматься реализацией качественного высокомаржинального продукта</p>
+                    </div>
+                    <div class="our_content_item_right">
+                        <img src="./img/our_item_4.png" alt="">
+                        <h5>Для мастеров
+                            в индустрии красоты</h5>
+                        <p>Тем кто хочет предлагать клиентам качественные услуги
+                            на недорогом продукте бизнесс-класса</p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
     <section class="wath">
         <div class="wrap_container">
             <div class="title_section">
