--- a/index.html
+++ b/index.html
@@ -31,7 +31,23 @@
             <hr>
         </div>
         <div class="main_header">
-
+            <div class="wrap_container">
+                <div class=" offset-md-7 col-md-6">
+                    <div class="header_title">
+                        <h1>NIRVEL PROFESSIONAL</h1>
+                        <h4>Испанская профессиональная <br> косметика бизнес-класса по демократичной цене. </h4>
+                        <ul>
+                            <li>География бренда 40+ странах мира</li>
+                            <li>10 000+ салонов используют в РФ</li>
+                            <li>10+ профессиональных линий косметики</li>
+                        </ul>
+                    </div>
+                    <div class="bottom bootom_header">
+                        <a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">СТАТЬ НАШИМ
+                            ПРЕДСТАВИТЕЛЕМ</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </header>
     <section>
@@ -76,8 +92,9 @@
         </div>
     </section>
     <section>
-        <div class="nav_tabs">
-            <div class="wrap_container">
+        <div class="wrap_container">
+            <div class="nav_tabs">
+
                 <nav>
                     <div class="nav nav-tabs" id="nav-tab" role="tablist">
                         <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab"
@@ -96,9 +113,6 @@
                     </div>
                 </nav>
             </div>
-
-        </div>
-        <div class="wrap_container">
             <div class="tab-content" id="nav-tabContent">
                 <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
                     <div class="tab_content_color">
@@ -129,9 +143,6 @@
                                         Ухаживающие компоненты защищают волосы
                                         во время окрашивания, гарантируют великолепное качество, мягкость, блеск волос.
                                     </p>
-                                </div>
-                                <div class="bottom">
-                                    <a href="#">НА ОФИЦИАЛЬНЫЙ САЙТ</a>
                                 </div>
                             </div>
                         </div>
@@ -167,18 +178,111 @@
                                         во время окрашивания, гарантируют великолепное качество, мягкость, блеск волос.
                                     </p>
                                 </div>
-                                <div class="bottom">
-                                    <a href="#">НА ОФИЦИАЛЬНЫЙ САЙТ</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">
+                    <div class="tab_content_color">
+                        <div class="tab_color_contetnt">
+                            <a class="image-popup-vertical-fit" data-effect="mfp-zoom-in" href="./img/home_color.jpg"
+                                title="Палитра мужского красителя красителя HOMME">
+                                <img src="./img/home_color.png">
+                            </a>
+                        </div>
+                        <div class="tab_color_contetnt">
+                            <div class="tab_text">
+                                <h3>Профессиональный полуперманентный краситель для мужчин</h3>
+                                <hr>
+                                <div class="tab_color_formula">
+                                    <p> <strong> Палитра:</strong> 70+ оттенков. <br>
+                                        <strong> Объем: </strong> 100 мл. <br>
+                                        <strong> Пропорция: </strong>
+                                        1:1,5 (100 мл. красителя + 150 мл. окислителя)
+                                    </p>
+                                </div>
+                                <div class="tab_color_decsription">
+                                    <p> Уникальная формула красителя ArtX обеспечивает глубокое проникновение пигментов,
+                                        которая
+                                        дает
+                                        100%
+                                        покрытие седины
+                                        и длительную стойкость цвета.
+                                        Ухаживающие компоненты защищают волосы
+                                        во время окрашивания, гарантируют великолепное качество, мягкость, блеск волос.
+                                    </p>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">...</div>
-                <div class="tab-pane fade" id="nav-nutre-color" role="tabpanel" aria-labelledby="nutre-Color-tab">Nutre
-                    Color
+                <div class="tab-pane fade" id="nav-nutre-color" role="tabpanel" aria-labelledby="nutre-Color-tab">
+                    <div class="tab_content_color">
+                        <div class="tab_color_contetnt">
+                            <a class="image-popup-vertical-fit" data-effect="mfp-zoom-in" href="./img/nutre_color.jpg"
+                                title="Палитра красителя Nutrecolor">
+                                <img src="./img/nutre_color.png">
+                            </a>
+                        </div>
+                        <div class="tab_color_contetnt">
+                            <div class="tab_text">
+                                <h3>Красящие гель-маски с пигментами прямого действия</h3>
+                                <hr>
+                                <div class="tab_color_formula">
+                                    <p> <strong> Палитра:</strong> 70+ оттенков. <br>
+                                        <strong> Объем: </strong> 100 мл. <br>
+                                        <strong> Пропорция: </strong>
+                                        1:1,5 (100 мл. красителя + 150 мл. окислителя)
+                                    </p>
+                                </div>
+                                <div class="tab_color_decsription">
+                                    <p> Уникальная формула красителя ArtX обеспечивает глубокое проникновение пигментов,
+                                        которая
+                                        дает
+                                        100%
+                                        покрытие седины
+                                        и длительную стойкость цвета.
+                                        Ухаживающие компоненты защищают волосы
+                                        во время окрашивания, гарантируют великолепное качество, мягкость, блеск волос.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="tab-pane fade" id="nav-deco-color" role="tabpanel" aria-labelledby="nutre-deco-tab">deco
+                <div class="tab-pane fade" id="nav-deco-color" role="tabpanel" aria-labelledby="nutre-deco-tab">
+                    <div class="tab_content_color">
+                        <div class="tab_color_contetnt">
+                            <a class="image-popup-vertical-fit" data-effect="mfp-zoom-in" href="./img/home_color.jpg"
+                                title="Палитра красителя NATURA">
+                                <img src="./img/home_color.png">
+                            </a>
+                        </div>
+                        <div class="tab_color_contetnt">
+                            <div class="tab_text">
+                                <h3>Профессиональный полуперманентный краситель для мужчин</h3>
+                                <hr>
+                                <div class="tab_color_formula">
+                                    <p> <strong> Палитра:</strong> 70+ оттенков. <br>
+                                        <strong> Объем: </strong> 100 мл. <br>
+                                        <strong> Пропорция: </strong>
+                                        1:1,5 (100 мл. красителя + 150 мл. окислителя)
+                                    </p>
+                                </div>
+                                <div class="tab_color_decsription">
+                                    <p> Уникальная формула красителя ArtX обеспечивает глубокое проникновение пигментов,
+                                        которая
+                                        дает
+                                        100%
+                                        покрытие седины
+                                        и длительную стойкость цвета.
+                                        Ухаживающие компоненты защищают волосы
+                                        во время окрашивания, гарантируют великолепное качество, мягкость, блеск волос.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -373,6 +477,116 @@
         </div>
     </section>
 
+    <section class="sect_from">
+        <div class="wrap_container">
+            <div class="start_begin">
+                <div class="form_start_begin">
+                    <div class="sect_from_title">
+                        <h2>НАЧАТЬ <br> СОТРУДНИЧЕСТВО</h2>
+                        <p>Оставь заявку сейчас и получи скидку <strong>до 25%</strong> <br>
+                            на первый заказ.</p>
+                    </div>
+                    <form class="row g-3 needs-validation" novalidate>
+                        <div class="col-md-12 position-relative">
+                            <input type="text" placeholder="Ваше Имя" class="form-control" id="validationTooltip01"
+                                value="" required>
+                            <div class="invalid-tooltip">
+                                В ведите ваше Имя
+                            </div>
+                        </div>
+                        <div class="col-md-12 position-relative">
+                            <div class="input-group has-validation">
+                                <input type="text" placeholder="Ваш e-mail" class="form-control"
+                                    id="validationTooltipUsername" aria-describedby="validationTooltipUsernamePrepend"
+                                    required>
+                                <div class="invalid-tooltip">
+                                    В ведите вашу почту для связи
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-12 position-relative">
+                            <input type="text" placeholder="Ваш телефон" class="form-control" id="validationTooltip03"
+                                required>
+                            <div class="invalid-tooltip">
+                                В ведите ваш номер телефона
+                            </div>
+                        </div>
+                        <div class="col-md-6 position-relative">
+                            <input type="text" placeholder="Ваш Город" class="form-control" id="validationTooltip03"
+                                required>
+                            <div class="invalid-tooltip">
+                                В ведите ваш Город
+                            </div>
+                        </div>
+                        <div class="col-md-6 position-relative">
+                            <select class="form-select" id="validationTooltip04" required>
+                                <option selected disabled value="">Кто вы?</option>
+                                <option>Мастер</option>
+                                <option>Дистрибьютор</option>
+                            </select>
+                            <div class="invalid-tooltip">
+                                Чем вы занимаетесь?
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <button class="button" type="submit">НАЧАТЬ СОТРУДНИЧЕСТВО</button>
+                        </div>
+                    </form>
+                </div>
+                <div class="content_start_begin">
+                    <img src="./img/img_begin.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="sect_studio">
+        <div class="wrap_container">
+            <div class="studio">
+                <div class="studio_images">
+                    <img src="./img/items_studo_content_img.png" alt="">
+                </div>
+                <div class="studio_content">
+                    <h2>ОБУЧАЕМ, ПРЕДОСТАВЛЯЕМ, ПОМОГАЕМ</h2>
+                    <hr>
+                    <div class="studio_contenet_items">
+                        <div class="items_studo_content">
+                            <img src="./img/item_studio_1.png" alt="">
+                            <div class="items_studo_content_descript">
+                                <p>ПРАКТИЧЕСКАЯ ОТРАБОТКАВ СОВРЕМЕННОЙ СТУДИИ</p>
+                            </div>
+                        </div>
+                        <div class="items_studo_content">
+                            <img src="./img/item_studio_2.png" alt="">
+                            <div class="items_studo_content_descript">
+                                <p>ПРОВЕДЕНИЕ ВЕБИНАРОВ ТЕХНОЛОГАМИ БРЕНДА</p>
+                            </div>
+                        </div>
+                        <div class="items_studo_content">
+                            <img src="./img/item_studio_3.png" alt="">
+                            <div class="items_studo_content_descript">
+                                <p>ONLINE-КОНСУЛЬТАЦИИ ПО РАБОТЕ С ПРОДУКТАМИ</p>
+                            </div>
+                        </div>
+                        <div class="items_studo_content">
+                            <img src="./img/item_studio_4.png" alt="">
+                            <div class="items_studo_content_descript">
+                                <p>ПЕЧАТНЫЕ ОБРАЗОВАТЕЛЬНЫЕ МАТЕРИАЛЫ</p>
+                            </div>
+                        </div>
+                        <div class="items_studo_content">
+                            <img src="./img/item_studio_5.png" alt="">
+                            <div class="items_studo_content_descript">
+                                <p>ОБУЧАЮЩАЯ ONLINE-ПЛАТФОРМА </p>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </section>
+
     <div class="bg_lids">
         <div class="wrap_container">
             <div class="lid_wrap">
@@ -389,6 +603,50 @@
                     <img src="./img/landing_bg_lid_2.png" alt="">
                 </div>
 
+            </div>
+        </div>
+    </div>
+
+
+    <div class="maps">
+        <div class="script_map">
+            <script type="text/javascript" charset="utf-8" async
+                src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A2ed40cd3888f1b6f3ef8c37b2a532ef669149de4f0e6884e7ab3c78e7e4a3298&amp;width=100%25&amp;height=660&amp;lang=ru_RU&amp;scroll=false"></script>
+        </div>
+        <div class="script_bg">
+            <div class="script_bg_contact">
+                <h2>НАШИ КОНТАКТЫ</h2>
+                <p>Компания <strong>ООО "ИГРО"</strong> - Эксклюзивный дистрибьютор марки <br> <strong>Nirvel
+                        Professional</strong> в России.</p>
+                <h5>109518, Россия, г. Москва, <br> Грайвороновская ул., д. 4, стр. 2</h5>
+                <div class="script_bg_contact_phone">
+                    <a href="tel:+74951093333">+7 (495) 109-33-33 (Многоканальный)</a> <br>
+                    <a href="tel:+74951093333">+7 (495) 988-58-59 (Многоканальный)</a>
+                    <p>info@igrobeauty.ru</p>
+                </div>
+                <div class="script_bg_contact_date">
+                    <p>Прием заказов и консультации по телефону <br>
+                        Пн.-Пт. с 09:00 до 19:00 <br>
+                        Суббота с 10:00 до 17:00</p>
+                </div>
+                <div class="script_bg_contact_icon">
+                    <a href="">
+                        <img src="./img/vk-social.png" alt="">
+                    </a>
+                    <a href="">
+                        <img src="./img/facebook-logo.png" alt="">
+                    </a>
+                    <a href="">
+                        <img src="./img/instagram.png" alt="">
+                    </a>
+                    <a href="">
+                        <img src="./img/youtube.png" alt="">
+                    </a>
+                </div>
+                <div class="script_bg_contact_links">
+                    <a href="">NIRVEL.RU</a> <br>
+                    <a href="">IGROBEAUTY.RU</a>
+                </div>
             </div>
         </div>
     </div>
@@ -413,8 +671,8 @@
                             </div>
                             <div class="col-md-12 position-relative">
                                 <div class="input-group has-validation">
-                                    <span class="input-group-text" id="validationTooltipUsernamePrepend">@</span>
-                                    <input type="text" class="form-control" id="validationTooltipUsername"
+                                    <input type="text" placeholder="Ваш e-mail" class="form-control"
+                                        id="validationTooltipUsername"
                                         aria-describedby="validationTooltipUsernamePrepend" required>
                                     <div class="invalid-tooltip">
                                         В ведите вашу почту для связи
