--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <link rel="stylesheet" href="./libs/Magnific-Popup-master/dist/magnific-popup.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./style/style.css">
-    <title></title>
+    <link rel="icon" href="https://nirvel.ru/local/templates/nirvel/favicon/safari-pinned-tab.svg">
+    <title>Nirvel Professional - профессиональная косметика для волос оптом</title>
+    <meta name="description"
+        content="Nirvel Professional - испанский бренд профессиональных продуктов для парикмахеров и стилистов. Оставить заяву на сотрудничество.">
 </head>
 
 <body>
@@ -519,6 +522,8 @@
                                 <option selected disabled value="">Кто вы?</option>
                                 <option>Мастер</option>
                                 <option>Дистрибьютор</option>
+                                <option>Салон красоты</option>
+                                <option>Магазин</option>
                             </select>
                             <div class="invalid-tooltip">
                                 Чем вы занимаетесь?
@@ -729,6 +734,8 @@
                                     <option selected disabled value="">Кто вы?</option>
                                     <option>Мастер</option>
                                     <option>Дистрибьютор</option>
+                                    <option>Салон красоты</option>
+                                    <option>Магазин</option>
                                 </select>
                                 <div class="invalid-tooltip">
                                     Чем вы занимаетесь?
