--- a/index.html
+++ b/index.html
@@ -26,6 +26,19 @@
                 <div class="logo">
                     <img src="./img/logo.png" alt="">
                 </div>
+                <nav class="navigation">
+                    <ul>
+                        <li>
+                            <a href="#produck">Продукция</a>
+                        </li>
+                        <li>
+                            <a href="#сooperation">Сотрудничество</a>
+                        </li>
+                        <li>
+                            <a href="#contacts">Контакты</a>
+                        </li>
+                    </ul>
+                </nav>
                 <div class="contacts">
                     <a href="mailto:info@igrobeauty.ru">info@nirvel.ru</a>
                     <a href="https://nirvel.ru/" target="blank">nirvel.ru</a>
@@ -36,27 +49,27 @@
             </div>
             <hr>
         </div>
-        <div class="main_header">
-            <div class="wrap_container">
-                <div class=" offset-md-6 col-md-6">
-                    <div class="header_title">
-                        <h1>NIRVEL PROFESSIONAL</h1>
-                        <h4>Испанская профессиональная <br> косметика бизнес-класса по демократичной цене. </h4>
-                        <ul>
-                            <li>География бренда 40+ странах мира</li>
-                            <li>10 000+ салонов используют в РФ</li>
-                            <li>10+ профессиональных линий косметики</li>
-                        </ul>
-                    </div>
-                    <div class="bottom bootom_header">
-                        <a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">СТАТЬ НАШИМ
-                            ПРЕДСТАВИТЕЛЕМ</a>
-                    </div>
+        <div class="main_header" ">
+            <div class=" wrap_container">
+            <div class=" offset-md-6 col-md-6">
+                <div class="header_title">
+                    <h1>NIRVEL PROFESSIONAL</h1>
+                    <h4>Испанская профессиональная <br> косметика бизнес-класса по демократичной цене. </h4>
+                    <ul>
+                        <li>География бренда 40+ странах мира</li>
+                        <li>10 000+ салонов используют в РФ</li>
+                        <li>10+ профессиональных линий косметики</li>
+                    </ul>
+                </div>
+                <div class="bottom bootom_header">
+                    <a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">СТАТЬ НАШИМ
+                        ПРЕДСТАВИТЕЛЕМ</a>
                 </div>
             </div>
         </div>
+        </div>
     </header>
-    <section>
+    <section id="produck">
         <div class="wrap_container">
             <div class="title_section">
                 <h2>ПРОДУКЦИЯ NIRVEL PROFESSIONAL</h2>
@@ -480,7 +493,7 @@
         </div>
     </section>
 
-    <section class="sect_from">
+    <section class="sect_from" id="сooperation">
         <div class="wrap_container">
             <div class="start_begin">
                 <div class="form_start_begin">
@@ -676,7 +689,7 @@
                     <a href="https://www.facebook.com/Nirvel-Professional-Russia-102140298459906" target="blank">
                         <img src="./img/facebook-logo.png" alt="">
                     </a>
-                    <a href="https://vk.com/nirvel" target="blank">
+                    <a href="https://www.instagram.com/nirvelrussia/" target="blank">
                         <img src="./img/instagram.png" alt="">
                     </a>
                     <a href="https://www.youtube.com/channel/UC7q5mip-yxm6niHKrDXkuqA" target="blank">
@@ -691,7 +704,7 @@
         </div>
     </div>
 
-    <div class="hiden_form">
+    <div class="hiden_form" id="contacts">
         <!-- Modal -->
         <div class="modal fade " id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
