--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <h1>NIRVEL PROFESSIONAL</h1>
                     <h4>Испанская профессиональная <br> косметика бизнес-класса по демократичной цене. </h4>
                     <ul>
-                        <li>География бренда 40+ странах мира</li>
+                        <li>География бренда 40+ стран мира</li>
                         <li>10 000+ салонов используют в РФ</li>
                         <li>10+ профессиональных линий косметики</li>
                     </ul>
@@ -153,13 +153,9 @@
                                 </div>
                                 <div class="tab_color_decsription">
                                     <p> Уникальная формула красителя ArtX обеспечивает глубокое проникновение пигментов,
-                                        которая
-                                        дает
-                                        100%
-                                        покрытие седины
-                                        и длительную стойкость цвета.
-                                        Ухаживающие компоненты защищают волосы
-                                        во время окрашивания, гарантируют великолепное качество, мягкость, блеск волос.
+                                        100% покрытие седины и длительную стойкость цвета. Ухаживающие компоненты
+                                        защищают волосы во время окрашивания, гарантируют великолепное качество,
+                                        мягкость, блеск волос.
                                     </p>
                                 </div>
                             </div>
@@ -350,7 +346,7 @@
                 <div class="items">
                     <img src="./img/icon_faq_3.png" alt="">
                     <div class="descrict_item">
-                        <h4>Использование SLS и SLES сведино к минимуму</h4>
+                        <h4>Использование SLS и SLES сведено к минимуму</h4>
                         <p>В большинстве продуктов в составе отсутствуют лаурил сульфат натрия и натрий лаурет сульфат.
                         </p>
                     </div>
@@ -366,14 +362,14 @@
                     <img src="./img/icon_faq_5.png" alt="">
                     <div class="descrict_item">
                         <h4>Широкий <br> ассортимент</h4>
-                        <p>Каталог продукции содержит 500+ восстребованных продукта и салонных процедур.</p>
+                        <p>Каталог продукции содержит 500+ восстребованных продуктов и салонных процедур.</p>
                     </div>
                 </div>
                 <div class="items">
                     <img src="./img/icon_faq_6.png" alt="">
                     <div class="descrict_item">
                         <h4>Продукция адаптирована <br> для российского рынка</h4>
-                        <p>Лаборатория бренда учитывает особенности “рссийских волос” и вносит изменения в формулы
+                        <p>Лаборатория бренда учитывает особенности “российских волос” и вносит изменения в формулы
                             продукции. </p>
                     </div>
                 </div>
@@ -402,14 +398,14 @@
                     <div class="our_content_item_left">
                         <img src="./img/our_item_1.png" alt="">
                         <h5>Для салонов и студий красоты</h5>
-                        <p>Тем кто заботится
+                        <p>Тех кто заботится
                             о своей репутации и использует
                             качественные материалы.</p>
                     </div>
                     <div class="our_content_item_left">
                         <img src="./img/our_item_2.png" alt="">
                         <h5>Для магазинов и интернет-магазинов</h5>
-                        <p>Тем кто хочет увеличить ассортимент продукции имеющий стабильный спрос</p>
+                        <p>Тех кто хочет увеличить ассортимент продукции имеющей стабильный спрос</p>
                     </div>
                 </div>
                 <div class="our_content_item_images">
@@ -420,14 +416,14 @@
                         <img src="./img/our_item_3.png" alt="">
                         <h5>Для предпринимателей
                             и дистрибьютеров</h5>
-                        <p>Тем кто хочет заниматься реализацией качественного высокомаржинального продукта</p>
+                        <p>Теx кто хочет заниматься реализацией качественного высокомаржинального продукта</p>
                     </div>
                     <div class="our_content_item_right">
                         <img src="./img/our_item_4.png" alt="">
                         <h5>Для мастеров
                             в индустрии красоты</h5>
-                        <p>Тем кто хочет предлагать клиентам качественные услуги
-                            на недорогом продукте бизнесс-класса</p>
+                        <p>Теx кто хочет предлагать клиентам качественные услуги
+                            на недорогом продукте бизнес-класса</p>
                     </div>
                 </div>
             </div>
@@ -438,7 +434,7 @@
     <section class="wath">
         <div class="wrap_container">
             <div class="title_section">
-                <h2>6 ПРИЧИН ПОЧЕМУ СТОИТ СОТРУДНИЧАТЬ С НАМИ</h2>
+                <h2>ШЕСТЬ ПРИЧИН ПОЧЕМУ СТОИТ СОТРУДНИЧАТЬ С НАМИ</h2>
             </div>
         </div>
         <div class="wrap_container">
@@ -447,14 +443,14 @@
                     <img src="./img/item_wath_1.png" alt="">
                     <div class="descrict_item">
                         <h4>Мы эксклюзивный представитель</h4>
-                        <p>Мы являемся эксклюзивным представителем бренда Nirvel Professional на территории России</p>
+                        <p>Мы являемся эксклюзивным представителем бренда Nirvel Professional на территории РФ</p>
                     </div>
                 </div>
                 <div class="items">
                     <img src="./img/item_wath_2.png" alt="">
                     <div class="descrict_item">
                         <h4>Товар <br> в наличии</h4>
-                        <p>Имеем складские помещения общей площадью более 1000 м.2, что позволяет нам поддерживать
+                        <p>Имеем складские помещения общей площадью более 1000 м2, что позволяет нам поддерживать
                             необходимый уровень остатков</p>
                     </div>
                 </div>
@@ -462,7 +458,7 @@
                     <img src="./img/item_wath_3.png" alt="">
                     <div class="descrict_item">
                         <h4>Удобство оформления <br> заказов</h4>
-                        <p>Вы можете оформлять заказы по телефону, email, а так же через сайт компании в личном кабинете
+                        <p>Вы можете оформлять заказы по телефону, e-mail, а также через сайт компании в личном кабинете
                         </p>
                     </div>
                 </div>
@@ -572,7 +568,7 @@
                         <div class="items_studo_content">
                             <img src="./img/item_studio_1.png" alt="">
                             <div class="items_studo_content_descript">
-                                <p>ПРАКТИЧЕСКАЯ ОТРАБОТКАВ СОВРЕМЕННОЙ СТУДИИ</p>
+                                <p>ПРАКТИЧЕСКАЯ ОТРАБОТКА В СОВРЕМЕННОЙ СТУДИИ</p>
                             </div>
                         </div>
                         <div class="items_studo_content">
